# work-api

./: docker-compose.yml  pyproject.toml
app/: main.py
app/domain/entities/: entity.py  screening.py  work.py
app/domain/repositories/: i_work_repository.py
app/domain/value_objects/: screeming_id.py  value_object.py  work_id.py
app/domain/values/: position_id.py
app/infrastructure/: inmemory_work_repository.py
app/infrastructure/in_memory/: inmemory_work_repository.py
app/interfaces/routers/: works.py
app/usecases/: get_work_usecase.py
app/usecases/work/: work_dto.py
app/usecases/work/create_work/: create_work_input_port.py  create_work_interactor.py  create_work_output_port.py  create_work_usecase.py
app/usecases/work/fetch_work/: fetch_work_input_port.py  fetch_work_interactor.py  fetch_work_output_port.py  fetch_work_usecase.py
app/usecases/work/fetch_works/: fetch_works_interactor.py  fetch_works_output_port.py  fetch_works_usecase.py
app/usecases/work/update_work/: update_work_input_port.py  update_work_interactor.py  update_work_output_port.py  update_work_usecase.py
docker/: Dockerfile
